--- a/ConsoleShop_WithDB/App.config
+++ b/ConsoleShop_WithDB/App.config
@@ -2,10 +2,10 @@
 <configuration>
 	<appSettings>		
 		<!--SQLite-->
-		<!--<add key="provider" value="SQLite"/>-->
-		
+		<add key="provider" value="SQLite"/>
+
 		<!--SqlServer-->
-		 <add key="provider" value="SqlServer"/>
+		<!--<add key="provider" value="SqlServer"/>-->
 		
 	</appSettings>
 
